# novarewind

./: CMakeLists.txt  README.md  novarewind.kdev4
.obs/: workflows.yml
licenses/: CC-BY-3.0.txt
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml  qml.qrc
src/assets/: assets.qrc
src/code/: main.cpp  snapshot.cpp  snapshot.h
src/controls/: Create.qml  GetPassword.qml  Home.qml  Remove.qml  RemoveConfirmation.qml  Restore.qml  RestoreConfirmation.qml  RestoreResult.qml  SettingsDialog.qml  main.qml  qml.qrc
src/data/: project.appdata.xml  project.desktop
systemd-timers/: novarewind-daily.service  novarewind-daily.timer  novarewind-monthly.service  novarewind-monthly.timer  novarewind-weekly.service  novarewind-weekly.timer
